--- a/mythesis.tex
+++ b/mythesis.tex
@@ -490,7 +490,7 @@ Pechenick, Ftaclas, and Cohen (1983) \cite{pechenick}. Rotational effects have b
 
 The observed pulse profiles from AMXPs appear to be rather close to sinusoidal with peak-to-peak oscillation amplitude 
 \be \label{eq:amplitude}
-A = \frac{F_{\mathrm{max}} - F_{\mathrm{min}}} {F_{\mathrm{max}} - F_{\mathrm{min}}}
+A = \frac{F_{\mathrm{max}} - F_{\mathrm{min}}} {F_{\mathrm{max}} + F_{\mathrm{min}}}
 \ee %https://arxiv.org/pdf/astro-ph/0510038v2.pdf
  between 4 and 12 per cent \cite{poutarew2006}, where $F_{\mathrm{max}}$ is the maximum observed flux and $F_{\mathrm{min}}$ is the minimum observed flux. Light bending tends %error, where?
 to reduce this variability amplitude. The amplitude depends only weakly on energy, and the spectrum may be fitted with a two-component model (blackbody and Comptonization). At higher energies the amplitude deviates more from a sine wave because of the different emission pattern. The weak energy dependency and a fairly constant spectral shape as a function of pulse phase, support also the idea that the bulk of the observed X-ray emission originates from the polar caps (where the gas stream channeled by the neutron star's magnetic field impacts the stellar surface forming a shock). Any additional source of radiation would have to have a spectrum identical to that of the shock.
